<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
      style="@style/text_view"
      android:text="@string/peso"/>

    <EditText
        android:id="@+id/edit_peso"
       style="@style/edit_text"/>

    <TextView
        style="@style/text_view"
        android:text="@string/altura"/>

    <EditText
        android:id="@+id/edit_altura"
        style="@style/edit_text"/>

    <LinearLayout
        style="@style/estilo_base">

        <Button
            android:id="@+id/bt_calcular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/calcular"/>


        <Button
            android:id="@+id/bt_limpar"
            android:layout_marginLeft="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limpar"/>
    </LinearLayout>

    <TextView
        android:id="@+id/imce"
        style="@style/text_view"
        android:text="@string/imce"/>


    <TextView
        android:id="@+id/classificacao"
        style="@style/text_view"
        android:text="@string/classificacao"/>



</LinearLayout>